updated footer information in all files

--- a/sentimental_analysis/realworld/templates/realworld/results.html
+++ b/sentimental_analysis/realworld/templates/realworld/results.html
@@ -138,21 +138,7 @@
          </main>
         
       </div>
-      <footer id="landing-footer" class="clearfix">
-         <div class="row clearfix">
-           <div class="col-2">
-             <p id="dev">
-               &copy; Developed by Team 58: <a href="https://github.com/jayjoshi1400/Sentimental-Analyzer-Pro">Sentimental-Analyzer-Pro</a>
-             </p>
-           </div>
-           <div class="col-2 disclaimer">
-             <div class="team-members">
-               <p>Team Members:</p>
-               <p>Jay Joshi&nbsp; Dinesh Pasupuleti &nbsp; Srivardhan Vura</p>
-             </div>
-           </div>
-         </div>
-       </footer>
+      {% include 'realworld/footer.html' %}
        <style>
          body {
             margin: 0;
