--- a/sentimental_analysis/realworld/templates/realworld/settings.html
+++ b/sentimental_analysis/realworld/templates/realworld/settings.html
@@ -343,21 +343,7 @@
             </section>
             
          </html>
-         <footer id="landing-footer" class="clearfix">
-            <div class="row clearfix">
-              <div class="col-2">
-                <p id="dev">
-                    &copy; Extended by Team 06: <a href="https://github.com/NCSU-SE-Spring2025-Group6/Sentimental-Analyzer-Pro.git">Sentimental-Analyzer-Pro</a>
-                </p>
-              </div>
-              <div class="col-2 disclaimer">
-                <div class="team-members">
-                  <p>Team Members:</p>
-                    <p>Md Jakaria&nbsp; 	Autumn Wright</p>
-                </div>
-              </div>
-            </div>
-          </footer>
+         {% include 'realworld/footer.html' %}
           
           
           
