Displayed banner on homepage

--- a/sentimental_analysis/realworld/templates/realworld/index.html
+++ b/sentimental_analysis/realworld/templates/realworld/index.html
@@ -92,20 +92,22 @@
          <div class="left-border wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;"></div>
       </div>
       <div id="wrapper">
-         {% include 'realworld/header.html' %}
-         <div id="banner-content" class="row clearfix">
-            <div class="section-heading">
-               <div class="col-38">
-                  <h1>Sentiment Analyzer Pro</h1>
-                  <div class="separator"></div>
-                  <h2 id="head">
-                     <br>Have you ever wondered what sentiments are behind the reviews on Amazon or maybe what someone says or what someone writes. Here we have created an elegant solution to such queries by having an analysis of these sentiments from the given input. <br><br>
-                  </h2>
-                  <div class="separator"></div>
+         <header id="banner" class="scrollto clearfix" data-enllax-ratio=".5">
+            {% include 'realworld/header.html' %}
+            <div id="banner-content" class="row clearfix">
+               <div class="section-heading">
+                  <div class="col-38">
+                     <h1>Sentiment Analyzer Pro</h1>
+                     <div class="separator"></div>
+                     <h2 id="head">
+                        <br>Have you ever wondered what sentiments are behind the reviews on Amazon or maybe what someone says or what someone writes. Here we have created an elegant solution to such queries by having an analysis of these sentiments from the given input. <br><br>
+                     </h2>
+                     <div class="separator"></div>
+                  </div>
                </div>
             </div>
-         </div>
-         <div class="sep"></div>
+            <div class="sep"></div>
+         </header>
          
          <main id="content" class="bgcol">
             <section id="about" class="introduction scrollto">
