Image analysis link moved and corrected

--- a/sentimental_analysis/realworld/templates/realworld/header.html
+++ b/sentimental_analysis/realworld/templates/realworld/header.html
@@ -7,6 +7,7 @@
             <ul class="social-icons">
                <li><a href="/#about">About</a></li>
                <li><a href="/#gallery">Product Analysis</a></li>
+               <li><a href="/#services">Image Analysis</a></li>
                <li><a href="/#news">News Analysis</a></li>
                <li><a href="/#live-speech">Live Speech</a></li>
                <li><a href="/#text">Text Analysis</a></li>
@@ -19,7 +20,6 @@
                   <option value="/#twitter">Twitter</option>
                   <option value="/#reddit">Reddit</option>
                </select>
-               <li><a href="/#image">Image Analysis</a></li>
                {% if user.is_authenticated %}
                   <li style="color: black; position: relative;">
                      <div class="dropdown">
