UI created for user history

--- a/sentimental_analysis/realworld/templates/realworld/history.html
+++ b/sentimental_analysis/realworld/templates/realworld/history.html
@@ -51,9 +51,46 @@
             <section id="about" class="introduction scrollto">
                 <div class="row clearfix" >
                     <div class="section-heading">
-                        <h2 class="section-title">Template for future development</h2>
+                        <h2 class="section-title">Product Analysis</h2>
                     </div>
                 </div>
+                </div>
+              </section>
+            <section id="about" class="introduction scrollto">
+                <div class="row no-padding-bottom clearfix">
+                    <div class="col-1" style="padding-left: 0px;">
+                        <div class="section-heading">
+                            <h2 class="section-title">Image Analysis</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Other sections here -->
+            <section id="news" class="scrollto clearfix">
+                <div class="row no-padding-bottom clearfix">
+                   <div class="col-1">
+                      <div class="section-heading">
+                         <h2 class="section-title">News Analysis</h2>
+                      </div>
+                   </div>
+                </div>
+            </section>
+            <section id="about" class="introduction scrollto">
+                <div class="row no-padding-bottom clearfix">
+                    <div class="col-1" style="padding-left: 0px;">
+                        <div class="section-heading">
+                            <h2 class="section-title">Live Speech Analysis</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="news" class="scrollto clearfix">
+                <div class="row no-padding-bottom clearfix">
+                   <div class="col-1">
+                      <div class="section-heading">
+                         <h2 class="section-title">Text Analysis</h2>
+                      </div>
+                   </div>
                 </div>
             </section>
         </main>
