--- a/sentimental_analysis/realworld/templates/realworld/header.html
+++ b/sentimental_analysis/realworld/templates/realworld/header.html
@@ -26,6 +26,7 @@
                         <a href="#" id="username-link" class="dropbtn">Welcome, {{ user.username }}</a>
                         <div class="dropdown-content">
                            <a href="{% url 'profile' %}">Profile</a>
+                           <a href="{% url 'history' %}">History</a>
                            <a href="{% url 'settings' %}">Settings</a>
                            <a href="{% url 'logout' %}">Logout</a>
                         </div>
