--- a/sentimental_analysis/realworld/templates/realworld/history.html
+++ b/sentimental_analysis/realworld/templates/realworld/history.html
@@ -177,7 +177,9 @@
                            <ol class="history-list">
                             {% for timestamp, data in history_data.Text_Analysis.items %}
                                 <li class="history-item">
-                                    <a href="#">{{ timestamp }}: {{ data }}</a>
+                                    <a href="{% url 'text_history_detail' timestamp=timestamp %}">
+                                        {{ timestamp }}: {{ data }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ol>
