--- a/sentimental_analysis/realworld/templates/realworld/history.html
+++ b/sentimental_analysis/realworld/templates/realworld/history.html
@@ -129,7 +129,10 @@
                         <ol class="history-list">
                             {% for timestamp, data in history_data.Image_Analysis.items %}
                                 <li class="history-item">
-                                    <a href="#">{{ timestamp }}: {{ data }}</a>
+                                    <!-- <a href="#">{{ timestamp }}: {{ data }}</a> -->
+                                    <a href="{% url 'image_history_detail' timestamp=timestamp %}">
+                                        {{ timestamp }}: {{ data }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ol>
@@ -145,7 +148,10 @@
                         <ol class="history-list">
                             {% for timestamp, data in history_data.News_Analysis.items %}
                                 <li class="history-item">
-                                    <a href="#">{{ timestamp }}: {{ data }}</a>
+                                    <!-- <a href="#">{{ timestamp }}: {{ data }}</a> -->
+                                    <a href="{% url 'news_history_detail' timestamp=timestamp %}">
+                                        {{ timestamp }}: {{ data }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ol>
