history retrive for all type of analysis

--- a/sentimental_analysis/realworld/templates/realworld/history.html
+++ b/sentimental_analysis/realworld/templates/realworld/history.html
@@ -113,7 +113,10 @@
                         <ol class="history-list">
                             {% for timestamp, data in history_data.Product_Analysis.items %}
                                 <li class="history-item">
-                                    <a href="#">{{ timestamp }}: {{ data }}</a>
+                                    <!-- <a href="#">{{ timestamp }}: {{ data }}</a> -->
+                                    <a href="{% url 'product_history_detail' timestamp=timestamp %}">
+                                        {{ timestamp }}: {{ data }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ol>
@@ -167,7 +170,10 @@
                         <ol class="history-list">
                             {% for timestamp, data in history_data.Doc_Analysis.items %}
                                 <li class="history-item">
-                                    <a href="#">{{ timestamp }}: {{ data }}</a>
+                                    <!-- <a href="#">{{ timestamp }}: {{ data }}</a> -->
+                                    <a href="{% url 'document_history_detail' timestamp=timestamp %}">
+                                        {{ timestamp }}: {{ data }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ol>
@@ -201,7 +207,10 @@
                         <ol class="history-list">
                             {% for timestamp, data in history_data.Audio_Analysis.items %}
                                 <li class="history-item">
-                                    <a href="#">{{ timestamp }}: {{ data }}</a>
+                                    <!-- <a href="#">{{ timestamp }}: {{ data }}</a> -->
+                                    <a href="{% url 'audio_history_detail' timestamp=timestamp %}">
+                                        {{ timestamp }}: {{ data }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ol>
@@ -217,7 +226,10 @@
                         <ol class="history-list">
                             {% for timestamp, data in history_data.Live_Speech.items %}
                                 <li class="history-item">
-                                    <a href="#">{{ timestamp }}: {{ data }}</a>
+                                    <!-- <a href="#">{{ timestamp }}: {{ data }}</a> -->
+                                    <a href="{% url 'live_history_detail' timestamp=timestamp %}">
+                                        {{ timestamp }}: {{ data }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ol>
@@ -266,7 +278,10 @@
                         <ol class="history-list">
                             {% for timestamp, data in history_data.Reddit.items %}
                                 <li class="history-item">
-                                    <a href="#">{{ timestamp }}: {{ data }}</a>
+                                    <!-- <a href="#">{{ timestamp }}: {{ data }}</a> -->
+                                    <a href="{% url 'reddit_history_detail' timestamp=timestamp %}">
+                                        {{ timestamp }}: {{ data }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ol>
