--- a/sentimental_analysis/realworld/templates/realworld/history.html
+++ b/sentimental_analysis/realworld/templates/realworld/history.html
@@ -246,7 +246,10 @@
                         <ol class="history-list">
                             {% for timestamp, data in history_data.Facebook.items %}
                                 <li class="history-item">
-                                    <a href="#">{{ timestamp }}: {{ data }}</a>
+                                    <!-- <a href="#">{{ timestamp }}: {{ data }}</a> -->
+                                    <a href="{% url 'facebook_history_detail' timestamp=timestamp %}">
+                                        {{ timestamp }}: {{ data }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ol>
@@ -262,7 +265,10 @@
                         <ol class="history-list">
                             {% for timestamp, data in history_data.Twitter.items %}
                                 <li class="history-item">
-                                    <a href="#">{{ timestamp }}: {{ data }}</a>
+                                    <!-- <a href="#">{{ timestamp }}: {{ data }}</a> -->
+                                    <a href="{% url 'twitter_history_detail' timestamp=timestamp %}">
+                                        {{ timestamp }}: {{ data }}
+                                    </a>
                                 </li>
                             {% endfor %}
                         </ol>
