--- a/sentimental_analysis/realworld/templates/realworld/index.html
+++ b/sentimental_analysis/realworld/templates/realworld/index.html
@@ -312,21 +312,13 @@
                        <div class="section-heading">
                            <h2 class="section-title">Text Analysis</h2>
                            <p class="section-subtitle">Type the text you want to analyze and Sentiment Analyzer Pro will report back the sentiments.</p>
-                           
-                           <!-- Single Text Analysis -->
-                           <form action="{% url 'text analysis' %}" method="post" enctype="multipart/form-data">
-                               {% csrf_token %}
-                               <label for="textField" class="form-label">Write here:</label>
-                               <input type="textField" id="text" class="line-edit" name="textField" required>
-                               <button type="submit" id="myButton2" class="button">Analyze Single Text</button>
-                           </form>
            
                            <!-- Batch Text Analysis -->
                            <form action="{% url 'batch_text_analysis' %}" method="post" enctype="multipart/form-data" class="mt-4">
                                {% csrf_token %}
-                               <label for="batchTextField" class="form-label">Multiple Texts (one per line):</label>
+                               <label for="batchTextField" class="form-label">Enter Text Here</label>
                                <textarea id="batchTextField" class="line-edit" name="batchTextField" rows="5" required></textarea>
-                               <button type="submit" id="batchButton" class="button">Analyze Multiple Texts</button>
+                               <button type="submit" id="batchButton" class="button">Analyze Text</button>
                            </form>
                        </div>
                    </div>
